--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "somali-programmer-ai-bot",
-  "homepage": "https://<YOUR_USERNAME>.github.io/<YOUR_REPOSITORY_NAME>",
+  "homepage": "https://2003platinum99-cell.github.io/AI/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
